--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+env:
+  NAME: kosa
+  USERNAME: kosa
+
 # 하나의 Workflow는 1개 이상의 Job으로 구성된다. 
 # 여러 Job은 기본적으로 병렬적으로 수행된다.
 jobs: 
@@ -35,3 +39,9 @@ jobs:
 
       - name: 환경 변수 모두 출력
         run: env
+
+      - name: 환경변수 NAME 출력
+        run: echo $${{env.NAME}}
+
+      - name: 환경변수 USERNAME 출력
+        run: echo $${{env.USERNAME}}
