--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ on:
 env:
   NAME: kosa
   USERNAME: kosa
-  USER_PASSSWORD: $${{ secrets.USER_PASSWORD }}
+  USER_PASSSWORD: ${{ secrets.USER_PASSWORD }}
 
 # 하나의 Workflow는 1개 이상의 Job으로 구성된다. 
 # 여러 Job은 기본적으로 병렬적으로 수행된다.
