--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,3 +49,11 @@ jobs:
 
       - name: secret USER_PASSWORD 출력
         run: echo ${{ env.USER_PASSSWORD }}
+
+  My-Deploy-Job2:
+    name: 배포 작업
+    runs-on: self-hosted
+    steps:
+      - name: 배포 작업 1단계 - 파일 생성
+        run: |
+          echo "hello world" > output.txt
