--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
         run: echo ${{ env.USER_PASSSWORD }}
 
   My-Deploy-Job2:
+    needs: My-Deploy-Job
     name: 배포 작업
     runs-on: self-hosted
     steps:
